# Django_practics

./: data.json  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
material/: models.py  urls.py  views.py
material/migrations/: 0001_initial.py  0002_material_is_published_material_slug_and_more.py  0003_rename_view_count_material_views_count_and_more.py
material/templates/material/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
static/css/: _pagination.scss
store/: admin.py  forms.py  models.py  urls.py  views.py
store/management/commands/: fill.py
store/migrations/: 0001_initial.py  0002_student_is_active.py  0003_contacts.py  0004_alter_contacts_email.py  0005_alter_contacts_massage.py  0006_subject.py  0007_alter_subject_options_alter_subject_title.py  0008_alter_subject_description.py
store/templates/store/: base.html  contacts_form.html  student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
store/templates/store/includes/: inc_main_menu.html
store/templatetags/: my_tags.py
