[tool.poetry]
name = "20-1-orm-in-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "20_1_orm_in_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.0"
ipython = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
